blurred jumbotron background layer fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
 }
 
 .jumbotron-inner {
-  background: linear-gradient(rgba(150, 150, 150, 0.5), rgba(200, 200, 200, 0.5));
+  background: linear-gradient(rgba(150, 150, 150, 0.2), rgba(200, 200, 200, 0.2));
   border-radius: 20px;
+  backdrop-filter: blur(15px);
 }
